--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,21 @@ a:hover {
   color: red;
 }
 
+button {
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  background: none;
+  padding: 5px 10px;
+}
+
+button:hover {
+  cursor: pointer;
+  background: lightblue;
+}
+
+button[disabled] {
+  cursor: not-allowed;
+}
 
 .button-link {
   color: darkblue;
@@ -47,10 +62,6 @@ nav li {
   margin: 5px;
 }
 
-button:hover {
-  cursor: pointer;
-}
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
@@ -69,8 +80,6 @@ code {
 
 .flash-remove {
   border: 0;
-  border-radius: 5px;
-  background: none;
   font-size: 2rem;
 }
 
@@ -144,9 +153,18 @@ code {
   padding-left: 0;
 }
 
+.collection-add {
+  width: 100%;
+}
+
 .doc {
   border: 1px solid gray;
   border-radius: 5px;
+}
+
+.doc:hover {
+  background-color: lightgray;
+  cursor: pointer;
 }
 
 .doc + .doc {
@@ -160,18 +178,9 @@ code {
   margin: 0;
 }
 
-.doc .properties {
-  margin: 10px 0;
-}
-
 .doc .property {
   display: flex;
   padding-left: 10px;
-}
-
-.doc .property.editable:hover {
-  background-color: cadetblue;
-  cursor: pointer;
 }
 
 .doc .prop-name {
@@ -183,8 +192,6 @@ code {
 .remove {
   visibility: hidden;
   border: none;
-  border-radius: 5px;
-  background-color: inherit;
   font-size: 1.5rem;
   line-height: 1rem;
   margin-left: auto;
@@ -192,20 +199,78 @@ code {
 
 .doc-header:hover > .remove, .property:hover > .remove {
   visibility: visible;
-}
-
-.doc .add-prop {
-  border: none;
-  border-top: 1px solid gray;
   background-color: inherit;
-  padding: 5px 0;
-  width: 100%;
 }
 
-.doc .add-prop:hover {
-  background-color: cadetblue;
-}
 
 .doc.danger, .doc .property.editable.danger {
   background-color: palevioletred;
+}
+
+.modal-background {
+  background-color: rgba(0, 0, 0, 0.25);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.modal {
+  background-color: #fff;
+  border-radius: 5px;
+  min-width: 30%;
+  padding: 10px;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal-close {
+  background: inherit;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1.5rem;
+}
+
+.modal-close:hover {
+  background: lightcoral;
+}
+
+.json-of-doc {
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  display: block;
+  padding: 5px;
+  width: 100%;
+  height: 250px;
+  margin: 0 auto;
+}
+
+.modal .status {
+  max-width: 350px
+}
+
+.modal .status.ok {
+  color: green;
+}
+
+.modal .status.error {
+  color: red;
+}
+
+button.modal.submit {
+  margin-top: 5px;
+}
+
+button.modal.submit[disabled=false]:hover {
+  background-color: darkgreen;
 }
